// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground/> should render with background dark 1`] = `
.c0 {
  background-color: #fff;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      Children
    </section>
  </section>
</div>
`;

exports[`<SectionBackground/> should render with background light 1`] = `
.c0 {
  background-color: #fff;
  color: #0A1128;
  background: #0A1128;
  color: #fff;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      Children
    </section>
  </section>
</div>
`;
